--- a/FilipeNobrega/Views/SimpleText/SimpleText.storyboard
+++ b/FilipeNobrega/Views/SimpleText/SimpleText.storyboard
@@ -19,25 +19,43 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sE6-uz-qph">
-                                <rect key="frame" x="0.0" y="20" width="375" height="150"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgU-89-ap4">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sE6-uz-qph">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="sE6-uz-qph" secondAttribute="height" multiplier="5:2" id="46a-Bp-F8p"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKo-4c-FWh">
+                                        <rect key="frame" x="166" y="160" width="42" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oaW-fn-8jr">
+                                        <rect key="frame" x="10" y="211" width="355" height="685"/>
+                                        <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="sE6-uz-qph" secondAttribute="height" multiplier="5:2" id="46a-Bp-F8p"/>
+                                    <constraint firstItem="sE6-uz-qph" firstAttribute="centerX" secondItem="kgU-89-ap4" secondAttribute="centerX" id="1Jz-f5-i3w"/>
+                                    <constraint firstAttribute="bottom" secondItem="oaW-fn-8jr" secondAttribute="bottom" constant="15" id="CFe-ot-w68"/>
+                                    <constraint firstItem="oaW-fn-8jr" firstAttribute="leading" secondItem="kgU-89-ap4" secondAttribute="leading" constant="10" id="Gfo-jP-aop"/>
+                                    <constraint firstItem="oaW-fn-8jr" firstAttribute="top" secondItem="lKo-4c-FWh" secondAttribute="bottom" constant="30" id="Jmg-QQ-hVw"/>
+                                    <constraint firstAttribute="trailing" secondItem="sE6-uz-qph" secondAttribute="trailing" id="ZCK-su-n9h"/>
+                                    <constraint firstItem="lKo-4c-FWh" firstAttribute="top" secondItem="sE6-uz-qph" secondAttribute="bottom" constant="10" id="cdA-yu-Sw4"/>
+                                    <constraint firstItem="sE6-uz-qph" firstAttribute="leading" secondItem="kgU-89-ap4" secondAttribute="leading" id="ghk-eo-pTA"/>
+                                    <constraint firstItem="sE6-uz-qph" firstAttribute="top" secondItem="kgU-89-ap4" secondAttribute="top" id="iC6-fu-Klu"/>
+                                    <constraint firstItem="lKo-4c-FWh" firstAttribute="centerX" secondItem="kgU-89-ap4" secondAttribute="centerX" id="jMZ-ab-x1j"/>
+                                    <constraint firstAttribute="trailing" secondItem="oaW-fn-8jr" secondAttribute="trailing" constant="10" id="zg5-vD-mQ9"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKo-4c-FWh">
-                                <rect key="frame" x="166" y="180" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U05-wO-vsC">
-                                <rect key="frame" x="10" y="231" width="355" height="436"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wSz-B4-vh3">
                                 <rect key="frame" x="15" y="35" width="46" height="30"/>
                                 <state key="normal" title="Button"/>
@@ -48,20 +66,19 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="sE6-uz-qph" secondAttribute="trailing" id="A3i-Si-GVo"/>
-                            <constraint firstItem="4LN-eg-uF0" firstAttribute="bottom" secondItem="U05-wO-vsC" secondAttribute="bottom" id="GJx-js-Azf"/>
-                            <constraint firstItem="U05-wO-vsC" firstAttribute="leading" secondItem="4LN-eg-uF0" secondAttribute="leading" constant="10" id="KcB-vA-jol"/>
-                            <constraint firstItem="lKo-4c-FWh" firstAttribute="top" secondItem="sE6-uz-qph" secondAttribute="bottom" constant="10" id="KeT-BX-9C1"/>
+                            <constraint firstItem="4LN-eg-uF0" firstAttribute="bottom" secondItem="kgU-89-ap4" secondAttribute="bottom" id="9hE-Jg-F3W"/>
                             <constraint firstItem="wSz-B4-vh3" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" constant="15" id="UvT-t2-k3S"/>
-                            <constraint firstItem="sE6-uz-qph" firstAttribute="leading" secondItem="4LN-eg-uF0" secondAttribute="leading" id="aNR-iL-C5r"/>
                             <constraint firstItem="wSz-B4-vh3" firstAttribute="leading" secondItem="4LN-eg-uF0" secondAttribute="leading" constant="15" id="bcz-l9-Ocx"/>
-                            <constraint firstItem="sE6-uz-qph" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" id="fBt-J0-rZY"/>
-                            <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="U05-wO-vsC" secondAttribute="trailing" constant="10" id="fR3-Xr-bd1"/>
-                            <constraint firstItem="U05-wO-vsC" firstAttribute="top" secondItem="lKo-4c-FWh" secondAttribute="bottom" constant="30" id="mKd-8P-9EH"/>
-                            <constraint firstItem="lKo-4c-FWh" firstAttribute="centerX" secondItem="4LN-eg-uF0" secondAttribute="centerX" id="vg0-qd-pfv"/>
+                            <constraint firstItem="kgU-89-ap4" firstAttribute="leading" secondItem="4LN-eg-uF0" secondAttribute="leading" id="mZ4-f0-fhD"/>
+                            <constraint firstItem="4LN-eg-uF0" firstAttribute="trailing" secondItem="kgU-89-ap4" secondAttribute="trailing" id="n3B-0D-OmN"/>
+                            <constraint firstItem="kgU-89-ap4" firstAttribute="top" secondItem="4LN-eg-uF0" secondAttribute="top" id="zhH-Cp-oXf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4LN-eg-uF0"/>
                     </view>
+                    <connections>
+                        <outlet property="headerImageView" destination="sE6-uz-qph" id="ce3-cS-QDS"/>
+                        <outlet property="scrollView" destination="kgU-89-ap4" id="jMG-d7-mYW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GXP-d2-n2V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
